brand title align:fixed

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -78,10 +78,6 @@ body {
 }
 
 @media screen and (max-width: 480px) {
-  .section1 .brandTitle {
-    text-align: left;
-  }
-
   .sectionOneText .capsula1left {
     width: 100%;
     margin-top: 5%;
@@ -89,6 +85,10 @@ body {
 
   .header1 {
     font-size: 29px;
+  }
+
+  .section1 .brandTitle {
+    text-align: start;
   }
 }
 @media screen and (min-width: 481px) {
