--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -40,15 +40,17 @@
     }
     
     @media screen and (max-width: 480px) {
-        .section1 .brandTitle {
-            text-align: left;
-        }
         .sectionOneText .capsula1left {
             width: 100%;
             margin-top: 5%;
         }
         .header1 {
             font-size: 29px;
+        }
+        .section1 {
+            .brandTitle {
+                text-align: start;
+            }
         }
     }
     
